--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class = "title--text">Hello Microverse!</h1>
+    <h1 class = "text">Hello Microverse!</h1>
 </body>
 </html>
